# scripts

./: pyproject.toml
.github/workflows/: codeql-analysis.yml
scripts/: translations.py
